k8s/rancher-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: example-container
        image: bashofmann/rancher-demo:1.1.0
        imagePullPolicy: Always  # Ensures the latest image is pulled
        ports:
        - containerPort: 8080
