k8s/video-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service-app
spec:
  replicas: 2  # Increased replicas for high availability
  selector:
    matchLabels:
      app: video-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: video-service-app
    spec:
      containers:
      - name: video-service-app
        image: IMAGE_NAME_PLACEHOLDER:TAG_PLACEHOLDER  # This will be replaced dynamically
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8082
            httpHeaders:
            - name: Authorization
              value: Bearer eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6IjY5RmUtOTNXVW15My1veEJVbnNPdSJ9.eyJpc3MiOiJodHRwczovL2Rldi12cGxubWo1dXJ5dG11bHh3LnVzLmF1dGgwLmNvbS8iLCJzdWIiOiI4U3NReHNFejNEZFF4cEpOQW4zQklVUHlza3JkT3Y4RkBjbGllbnRzIiwiYXVkIjoiaHR0cDovL2xvY2FsaG9zdDo4MDgwL2FwaS91c2Vycy9jcmVhdGVPclVwZGF0ZSIsImlhdCI6MTcxOTE5Mzk4NCwiZXhwIjoxNzE5MjgwMzg0LCJndHkiOiJjbGllbnQtY3JlZGVudGlhbHMiLCJhenAiOiI4U3NReHNFejNEZFF4cEpOQW4zQklVUHlza3JkT3Y4RiJ9.KiLw-C77IYosrBvMoy6ot85TF5JM-GYAJdHxYSbCx4ixUbj5rg [...]
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8082
            httpHeaders:
            - name: Authorization
              value: Bearer eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6IjY5RmUtOTNXVW15My1veEJVbnNPdSJ9.eyJpc3MiOiJodHRwczovL2Rldi12cGxubWo1dXJ5dG11bHh3LnVzLmF1dGgwLmNvbS8iLCJzdWIiOiI4U3NReHNFejNEZFF4cEpOQW4zQklVUHlza3JkT3Y4RkBjbGllbnRzIiwiYXVkIjoiaHR0cDovL2xvY2FsaG9zdDo4MDgwL2FwaS91c2Vycy9jcmVhdGVPclVwZGF0ZSIsImlhdCI6MTcxOTE5Mzk4NCwiZXhwIjoxNzE5MjgwMzg0LCJndHkiOiJjbGllbnQtY3JlZGVudGlhbHMiLCJhenAiOiI4U3NReHNFejNEZFF4cEpOQW4zQklVUHlza3JkT3Y4RiJ9.KiLw-C77IYosrBvMoy6ot85TF5JM-GYAJdHxYSbCx4ixUbj5rg [...]
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 3
