k8s/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30001
  selector:
    app: demo-service-app
