k8s/rancher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: rancher
