k8s/video-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  type: NodePort
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30002
  selector:
    app: video-service-app
