k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /videos
        pathType: Prefix
        backend:
          service:
            name: spring-boot-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher-service
            port:
              number: 8080
